<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2014 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
  <string name="app_name">Find My Bus</string>

  <string name="cvtd_key">4MWSKU637kuM98HMD2563p281a8TLC1I</string>

  <string name="latitude_label">Latitude</string>
  <string name="longitude_label">Longitude</string>
  <string name="last_update_time_label">Last location update time</string>

  <string name="start_updates">Start updates</string>
  <string name="stop_updates">Stop updates</string>
  <string name="save_preferences">Edit Preferences</string>
  <string name="location_updated_message">Location updated</string>

  <string name="wait_time_text">The bus is within:</string>
  <string name="wait_time_min_text">minutes</string>
  <string name="bus_stop_distance_text">miles</string>
  <string name="temp_text">The temperature is:</string>
  <string name="temp_above_text">above</string>
  <string name="temp_below_text">below</string>
  <string name="degree_symbol">\u2109</string>
  <string name="transport_mode">I am:</string>
  <string name="see_routes">See CVTD System Map</string>
  <string name="min_default_value">3</string>
  <string name="mile_default_value">.3</string>
  <string name="prefs_name">Notify me if:</string>
</resources>
