<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2014 Google, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#3e5381">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_updates_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:onClick="startUpdatesButtonHandler"
            android:text="@string/start_updates" />

        <Button
            android:id="@+id/stop_updates_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:enabled="true"
            android:gravity="center"
            android:onClick="stopUpdatesButtonHandler"
            android:text="@string/stop_updates" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView  android:id="@+id/wait_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_time_text"
            android:textSize="24sp"
            android:textColor="#ffffff"/>

        <Spinner  android:id="@+id/minutes_spinner"
            android:paddingLeft="15dp"
            android:layout_width="90dp"
            android:layout_height="40dp"/>

        <TextView  android:id="@+id/wait_time_min_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_time_min_text"
            android:textSize="24sp"
            android:textColor="#ffffff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Spinner  android:id="@+id/miles_spinner"
            android:paddingLeft="15dp"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="186dp" />

        <TextView  android:id="@+id/miles_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_stop_distance_text"
            android:textSize="24sp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView  android:id="@+id/temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            android:textSize="24sp"
            android:textColor="#ffffff" />

        <TextView  android:id="@+id/temp_below_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/temp_below_text"
            android:textSize="24sp"
            android:textColor="#ffffff" />

        <Spinner  android:id="@+id/temp_below_spinner"
            android:paddingLeft="15dp"
            android:layout_width="130dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView  android:id="@+id/temp_above_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_above_text"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:layout_marginLeft="215dp" />

        <Spinner  android:id="@+id/temp_above_spinner"
            android:paddingLeft="15dp"
            android:layout_width="130dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView android:id="@+id/transport_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport_mode"
                android:textSize="24sp"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <CheckedTextView
                android:id="@+id/walking_check_box"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="true"
                android:gravity="center_vertical"
                android:text="Walking"
                android:textSize="24sp"
                android:textColor="#ffffff" />

            <CheckedTextView
                android:id="@+id/biking_check_box"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="true"
                android:gravity="center_vertical"
                android:text="Biking"
                android:textSize="24sp"
                android:textColor="#ffffff"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:enabled="true"
            android:gravity="center"
            android:onClick="savePreferencesButtonHandler"
            android:text="@string/save_preferences" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:enabled="true"
            android:gravity="center"
            android:onClick="cvtdButtonHandler"
            android:text="@string/see_routes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom">

        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:textSize="@dimen/default_text_size"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:textSize="@dimen/default_text_size"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/last_update_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:textSize="@dimen/default_text_size"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>
